--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozy-konnector-ascoresante",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "repository": {
     "type": "git",
@@ -34,19 +34,19 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.10.3",
+    "cozy-konnector-libs": "4.11.0",
     "svgo": "^1.1.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "4.5.2",
-    "cozy-app-publish": "0.8.0",
-    "cozy-jobs-cli": "1.4.11",
+    "cozy-app-publish": "0.8.1",
+    "cozy-jobs-cli": "1.5.0",
     "eslint": "5.6.0",
-    "eslint-config-cozy-app": "1.1.1",
+    "eslint-config-cozy-app": "1.1.3",
     "git-directory-deploy": "1.5.1",
-    "husky": "0.14.3",
+    "husky": "1.0.0-rc.15",
     "konitor": "0.9.0",
-    "webpack": "4.19.1",
-    "webpack-cli": "3.1.0"
+    "webpack": "4.20.0",
+    "webpack-cli": "3.1.1"
   }
 }
