--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.11.0",
-    "svgo": "^1.1.1"
+    "cozy-konnector-libs": "4.11.2",
+    "svgo": "1.1.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "4.5.2",
-    "cozy-app-publish": "0.8.1",
-    "cozy-jobs-cli": "1.5.0",
-    "eslint": "5.6.0",
+    "copy-webpack-plugin": "4.5.3",
+    "cozy-app-publish": "0.8.5",
+    "cozy-jobs-cli": "1.5.1",
+    "eslint": "5.6.1",
     "eslint-config-cozy-app": "1.1.3",
     "git-directory-deploy": "1.5.1",
-    "husky": "1.0.0-rc.15",
+    "husky": "1.1.2",
     "konitor": "0.9.0",
-    "webpack": "4.20.0",
-    "webpack-cli": "3.1.1"
+    "webpack": "4.20.2",
+    "webpack-cli": "3.1.2"
   }
 }
